--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 
 body{
+	background: linear-gradient(0deg, rgba(246, 247, 251, 0.7), rgba(246, 247, 251, 0.7)), #FFFFFF;
 	font-family: "Century Gothic Bold";
 }
 
@@ -313,4 +314,311 @@ header{
 	position: absolute;
 	left: 100px;
 	transform: scale(-1,-1);
+}
+
+.tabInfo{
+	width: 900px;
+	position: absolute;
+	top: 60px;
+	left: 20px;
+	overflow-y: scroll;
+	border: 2px solid #CED6E9;
+	border-radius: 8px;
+	border-collapse:collapse;
+}
+
+
+.divTab{
+	position: absolute;
+	top: 550px;
+	left: 250px;
+	z-index: 2;
+	display: none;
+}
+
+.tabInfo table{
+	border-collapse:collapse;
+}
+
+
+.divTab button{
+	position: absolute;
+	left: 870px;
+	top: 20px;
+	z-index: 3;
+	background: url("../img/close-btn.png") no-repeat;
+	background-size: cover;
+	width: 54px;
+	height: 47px;
+}
+
+.tabInfo table tr{
+	color: #18233C;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
+}
+.tabInfo table tr:nth-child(1){
+	color: #A6B5D6;
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 16px;
+	background: white;
+}
+
+
+
+.tabInfo table tr td{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	text-align: right;
+}
+.tabInfo table tr td:nth-child(1) {
+	width: 200px;
+	padding-right: 40px;
+	text-align: left;
+}
+.tabInfo table tr td:nth-child(7) {
+	padding-right: 20px;
+}
+.tabInfo table tr:nth-child(1) td {
+	width: 100px;
+}
+
+.tabInfo table tr:not(:nth-child(1)):nth-child(2n+1) {
+	background: #E5E8F2;
+}
+.tabInfo table tr:nth-child(2n) {
+	background: white;
+}
+
+.blockThreed{
+	display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+	width: 900px;
+	height: 800px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.topText{
+	grid-column-start: 1;
+  grid-column-end: 4;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 44px;
+	text-align: center;
+	color: #30529F;
+}
+
+.blockThreed button{
+	border: none;
+	background: transparent;
+	width: 325px;
+	display: flex;
+}
+
+#img-b{
+	margin: 15px;
+}
+#img-btn{
+	margin: 15px;
+	margin-top: 20px;
+}
+.blockThreed div{
+	display: block;
+	font-family: "Century Gothic";
+	width: 325px;
+	margin: 20px;
+}
+
+.blockThreed div h4{
+	font-family: "Century Gothic Bold";
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 24px;
+	color: #30529F;
+}
+
+.blockThreed div p{
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	color: #212F50;
+}
+
+.blockThreed button p{
+	font-family: "Century Gothic Bold";
+	font-size: 12px;
+	line-height: 24px;
+	color: rgba(48, 82, 159, 0.57);
+}
+
+.blockFour{
+	margin-top: 300px;
+	margin-left: 150px;
+}
+
+.nameBlock{
+	font-weight: 700;
+	font-size: 48px;
+	line-height: 44px;
+	color: #30529F;
+}
+
+.infoBlockFour{
+	font-family: "Century Gothic";
+	width: 440px;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	color: #212F50;
+}
+
+.calcBtn{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	width: 320px;
+}
+
+.calcBtn div{
+	width: 80px;
+	height: 80px;
+	text-align: center;
+	justify-content: center;
+}
+
+.calcBtn img{
+	margin-top: 10px;
+
+}
+
+.calcBtn div:hover{
+	transform: scale(1.3);
+}
+/*
+	background-size: cover;
+	background: url("../img/blockFour/wapper.png") no-repeat 5px 0px;*/
+
+
+.calcDiv{
+	margin-top: -70px;
+	font-weight: 700;
+	font-size: 64px;
+	line-height: 48px;
+	color: #30529F;
+}
+
+
+.calcDiv img{
+	width: 50px;
+	height: 50px;
+}
+
+img#nav-one{
+	margin-bottom: 10px;
+	margin-left: -40px;
+}
+
+img#nav-two{
+	margin-bottom: 10px;
+	margin-left: -50px;
+}
+
+img#nav-three{
+	margin-bottom: 10px;
+	margin-left: -50px;
+}
+
+.calcDiv input{
+	background: transparent;
+	border: none;
+	outline: none;
+	width: 200px;
+	margin-left: 0px;
+	font-weight: 700;
+	font-size: 120px;
+	line-height: 48px;
+	color: #30529F;
+}
+
+.calcDiv input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+}
+
+.total{
+	position: absolute;
+}
+
+
+.total h1{
+	font-weight: 700;
+	font-size: 48px;
+	line-height: 48px;
+	color: white;
+	padding-top: 60px;
+}
+
+.total div{
+	width: 280px;
+	height: 280px;
+	text-align: center;
+	background-size: contain;
+	position: absolute;
+}
+
+.total p{
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	color: white;
+}
+
+.minMas{
+	top: -300px;
+	left: 700px;
+}
+
+.minMas svg{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: -1;
+	width: 300px;
+}
+
+.midMas svg{
+	position: absolute;
+	top: 0px;
+	left: -50px;
+	z-index: -1;
+	width: 400px;
+}
+
+.maxMas svg{
+	position: absolute;
+	top: 0px;
+	left: -100px;
+	z-index: -1;
+	width: 500px;
+}
+
+.midMas{
+	top: -600px;
+	left: 600px;
+}
+
+.maxMas{
+	top: -700px;
+	left: 900px;
+	width: 350px;
+	height: 350px;
+	text-align: center;
+}
+
+.total img{
+	position: absolute;
+	top: -500px;
+	left: 850px;
 }
