--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,30 @@
   src: url("../fonts/centurygothiclit.ttf")
 }
 
+html{
+	
+}
 
 body{
-	background: linear-gradient(0deg, rgba(246, 247, 251, 0.7), rgba(246, 247, 251, 0.7)), #FFFFFF;
+	background-color: #f6f7fb;
 	font-family: "Century Gothic Bold";
+}
+
+
+
+main{
+	background-image: url("../img/wapperBody.png");
+	background-position: 100% 50% ;
+	background-repeat: repeat-y;
+	width: 1360px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer{
+	width: 1360px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 header div{
@@ -35,8 +55,14 @@ header div{
 }
 
 header{
+	background-image: url("../img/wapperBody.png");
+	background-position: 100% 50%;
+	background-repeat: repeat-y;
 	/*background: url("../img/vectorPig.svg") left 373px
 	top 1px no-repeat;*/
+	width: 1360px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .labelHead{
@@ -291,13 +317,14 @@ header{
 	color: hotpink;
 }
 
-.navBut{
+.navImg{
+	position: absolute;
 }
 
 .blockTwoBut{
  position: absolute;
- top: 900px;
- left: 1200px;
+ top: -200px;
+ left: 1230px;
  opacity: 0.6;
 }
 
@@ -312,7 +339,7 @@ header{
 
 .blockTwoButRev{
 	position: absolute;
-	left: 100px;
+	left: 130px;
 	transform: scale(-1,-1);
 }
 
@@ -398,8 +425,8 @@ header{
   grid-template-columns: 1fr 1fr 1fr;
 	width: 900px;
 	height: 800px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-top: 152px;
+	margin-left: 162px;
 }
 
 .topText{
@@ -431,6 +458,7 @@ header{
 	font-family: "Century Gothic";
 	width: 325px;
 	margin: 20px;
+	padding-top: 10px;
 }
 
 .blockThreed div h4{
@@ -455,9 +483,130 @@ header{
 	color: rgba(48, 82, 159, 0.57);
 }
 
+#blockPig{
+	margin-left: -5px;
+}
+#blockPig img{
+	margin-left: -5px;
+	margin-top: 10px;
+}
+#blockPig h4{
+	margin-top: -20px;
+}
+#blockPig p{
+	margin-top: -9px;
+}
+
+#blockChick{
+	margin-left: 35px;
+}
+#blockChick img{
+	margin-left: -5px;
+	margin-top: 0px;
+}
+#blockChick h4{
+	margin-top: -10px;
+}
+#blockChick p{
+	margin-top: -9px;
+}
+#blockChick button p{
+	margin-top: 0px;
+}
+#blockChick #img-btn{
+	margin-top: 10px;
+	margin-left: 8px;
+}
+
+#blockCow{
+	margin-left: 20px;
+}
+#blockCow img{
+	margin-left: -5px;
+	margin-top: -10px;
+}
+#blockCow h4{
+	margin-top: -2px;
+	margin-left: 13px;
+}
+#blockCow p{
+	margin-top: -9px;
+	margin-left: 13px;
+}
+#blockCow button p{
+	margin-top: 0px;
+	margin-left: 0;
+}
+#blockCow #img-b{
+	margin-top: 5px;
+	margin-left: 10px;
+}
+#blockCow #img-btn{
+	margin-top: 10px;
+	margin-left: 8px;
+}
+
+#blockRab{
+	margin-left: -5px;
+}
+#blockRab img{
+	margin-left: -5px;
+	margin-top: -21px;
+}
+#blockRab h4{
+	margin-top: -10px;
+}
+#blockRab p{
+	margin-top: -9px;
+
+}
+#blockRab button p{
+	margin-top: 0px;
+
+}
+#blockRab #img-btn{
+	margin-top: 20px;
+	margin-left: 8px;
+}
+#blockRab #img-b{
+	margin-top: 20px;
+	margin-left: 0px;
+}
+
+#blockBirds{
+	margin-left: 35px;
+}
+#blockBirds img{
+	margin-left: -5px;
+	margin-top: -21px;
+}
+#blockBirds h4{
+	margin-top: -10px;
+}
+#blockBirds p{
+	margin-top: -9px;
+
+}
+
+#blockDuck{
+	margin-left: 35px;
+}
+#blockDuck img{
+	margin-left: -5px;
+	margin-top: -21px;
+}
+#blockDuck h4{
+	margin-top: -10px;
+}
+#blockDuck p{
+	margin-top: -9px;
+
+}
+
+
 .blockFour{
-	margin-top: 300px;
-	margin-left: 150px;
+	margin-top: 228px;
+	margin-left: 160px;
 }
 
 .nameBlock{
@@ -474,72 +623,74 @@ header{
 	font-size: 16px;
 	line-height: 24px;
 	color: #212F50;
+	padding-top: 5px;
+	margin-left: 0px;
 }
 
 .calcBtn{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	width: 320px;
+	margin-left: -10px;
+	cursor: pointer;
 }
 
 .calcBtn div{
 	width: 80px;
 	height: 80px;
+	padding:0px 5px;
 	text-align: center;
 	justify-content: center;
+	cursor: pointer;
 }
 
 .calcBtn img{
 	margin-top: 10px;
+	cursor: pointer;
 
 }
 
-.calcBtn div:hover{
-	transform: scale(1.3);
+.calcBtn div, .calcBtn img, .calcBtn svg, .calcBtn path {
+	cursor: pointer;
 }
-/*
-	background-size: cover;
-	background: url("../img/blockFour/wapper.png") no-repeat 5px 0px;*/
-
 
 .calcDiv{
-	margin-top: -70px;
+	margin-top: -30px;
 	font-weight: 700;
-	font-size: 64px;
-	line-height: 48px;
+	font-size: 32px;
+	line-height: 0px;
 	color: #30529F;
 }
 
 
 .calcDiv img{
-	width: 50px;
-	height: 50px;
+	width: 25px;
+	height: 25px;
+	margin-bottom: 5px;
 }
 
 img#nav-one{
-	margin-bottom: 10px;
-	margin-left: -40px;
+	margin-left: -10px;
 }
 
 img#nav-two{
-	margin-bottom: 10px;
-	margin-left: -50px;
+	margin-left: -30px;
 }
 
 img#nav-three{
-	margin-bottom: 10px;
-	margin-left: -50px;
+	margin-left: -30px;
 }
 
 .calcDiv input{
 	background: transparent;
 	border: none;
 	outline: none;
-	width: 200px;
+	width: 150px;
 	margin-left: 0px;
+	margin-right: 0px;
 	font-weight: 700;
-	font-size: 120px;
-	line-height: 48px;
+	font-size: 64px;
+	line-height: 0px;
 	color: #30529F;
 }
 
@@ -576,8 +727,8 @@ img#nav-three{
 }
 
 .minMas{
-	top: -300px;
-	left: 700px;
+	top: -250px;
+	left: 580px;
 }
 
 .minMas svg{
@@ -585,10 +736,18 @@ img#nav-three{
 	top: 0px;
 	left: 0px;
 	z-index: -1;
-	width: 300px;
+	width: 280px;
 }
 
 .midMas svg{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: -1;
+	width: 300px;
+}
+
+.maxMas svg{
 	position: absolute;
 	top: 0px;
 	left: -50px;
@@ -596,29 +755,303 @@ img#nav-three{
 	width: 400px;
 }
 
-.maxMas svg{
-	position: absolute;
-	top: 0px;
-	left: -100px;
-	z-index: -1;
-	width: 500px;
-}
-
 .midMas{
-	top: -600px;
-	left: 600px;
+	top: -430px;
+	left: 470px;
 }
 
 .maxMas{
-	top: -700px;
-	left: 900px;
-	width: 350px;
+	top: -550px;
+	left: 750px;
+	width: 250px;
 	height: 350px;
 	text-align: center;
+	z-index: 1;
 }
 
 .total img{
 	position: absolute;
-	top: -500px;
-	left: 850px;
+	top: -400px;
+	left: 750px;
+	z-index: 2;
+}
+
+.blockFive{
+	margin-top: 200px;
+}
+
+.sciencer{
+	position: absolute;
+	width: 700px;
+	margin-left: -100px;
+	margin-top: -100px;
+}
+
+.sciencer svg{
+	position: absolute;
+	left: 100px;
+	top: 0px;
+}
+
+
+.sciencer img{
+	position: absolute;
+}
+
+.infoBlockFive{
+	width: 600px;
+	margin-left: 633px;
+
+}
+
+.infoBlockFive h1{
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 44px;
+	color: #30529F;
+	padding-top: 10px;
+}
+
+.infoBlockFive p{
+	font-family: "Century Gothic";
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	color: #212F50;
+	padding-top: 10px;
+
+}
+
+.dignityComp{
+	width: 600px;
+	display: flex;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	color: #F28F1B;
+	margin-top: -5px;
+
+}
+
+.dignityComp div{
+	width: 250px;
+	padding:0px 10px;
+	text-align: left;
+	margin-left: -15px;
+}
+
+.dignityComp h1{
+	font-weight: 700;
+	font-size: 48px;
+	line-height: 48px;
+	color: #F28F1B;
+}
+
+.dignityComp p{
+	margin-top: -40px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	color: #F28F1B;
+}
+
+
+
+.mapHref{
+	margin-left: -7px;
+	margin-top: 10px;
+	width: 250px;
+	display: flex;
+	background: transparent;
+	border: none;
+}
+
+.mapHref img{
+	padding-top: 15px;
+}
+
+.mapHref .mapBtn{
+	padding-top: 20px;
+}
+
+.mapHref p{
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	color: #869AC7;
+	padding: 0px 10px;
+}
+button{
+	cursor: pointer;
+}
+
+.blockSeven{
+	display: flex;
+	margin-left: 140px;
+}
+
+.blockSeven div{
+	width: 250px;
+	margin:20px 15px;
+}
+
+.blockSeven #blobSvg{
+	margin-left: -30px;
+}
+
+.blockSeven div h1{
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	text-transform: capitalize;
+	color: #30529F;
+}
+
+.blockSeven div .data{
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 24px;
+	color: #C9D1E6;
+}
+
+.clickbait{
+	font-family: "Century Gothic";
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	height: 150px;
+	background: linear-gradient(180deg, #212F50 16.27%, rgba(33, 47, 80, 0) 76.51%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	background-clip: text;
+	text-fill-color: transparent;
+}
+
+.blockSeven .headerBlock{
+	margin: 20px;
+}
+
+.blockSeven .headerBlock p{
+	font-family: 'Century Gothic';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	color: #212F50;
+	padding-top: 10px;
+	margin-left: -2px;
+}
+
+.blockSeven .headerBlock h1{
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 44px;
+	color: #30529F;
+}
+
+.article-btn{
+	width: 160px;
+	height: 36px;
+	background: rgba(48, 82, 159, 0.2);
+	border-radius: 8px;
+	border: none;
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 24px;
+	text-align: center;
+	color: #30529F;
+}
+
+.article-btn:hover{
+	opacity: 0.6;
+}
+
+.foot{
+	margin-top:155px ;
+	margin-left: 60px;
+}
+
+footer div {
+	display: flex;
+	margin-left: 100px;
+	margin-top: 40px;
+}
+
+.company{
+	display: block;
+	width: 500px;
+}
+
+.company p{
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	color: #869AC7;
+	margin-top: -20px;
+}
+
+.company .nameComp{
+	margin-top: 0px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	text-transform: capitalize;
+	color: #869AC7;
+}
+
+.correct{
+	display: flex;
+	position: absolute;
+	margin-left: 580px;
+	width: 200px;
+	margin-top: 30px;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	color: #869AC7;
+}
+
+.correct img{
+	position: absolute;
+	padding-top: 35px;
+	margin-left: 160px;
+	width: 10px;
+	height: 10px;
+}
+
+.social{
+	width: 500px;
+	height: 100px;
+	padding: 20px;
+	margin-top: 15px;
+	margin-left: 500px;
+}
+
+.social svg{
+	position: absolute;
+	width: 80px;
+	margin-top: -10px;
+}
+
+.social img{
+	position: absolute;
+	margin-top: 10px;
+}
+
+.headerWap .wapHead{
+	position: absolute;	
+}
+
+
+.headerWap {
+	position: absolute;
+	display: block;
+	width: 100%;
+	left: 200px;
+	z-index: -1;
+}
+
+
+.parallaxPig{
+	width: 500px;
 }
