--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1142,7 +1142,7 @@ footer div {
 }
 
 .selNav{
-	background: rgb(255,255,255,0.5);
+	background: rgb(255,255,255,1);
 	color: #30529F;
 	border: none;
 	border-radius: 20px;
@@ -1152,11 +1152,11 @@ footer div {
 	display: none;
 	transition: margin-left 10s;
 	text-align: right;
-	width: 100px;
+	width: 341px;
 	padding-right: 20px;
-	margin-left: 200px;
+	margin-left: 0px;
 	margin-top: 30px;
-
+	z-index: 20;
 }
 
 .selNav a{
@@ -1173,8 +1173,18 @@ footer div {
 #btnUl{
 	transition: 0.3s;
 }
-
+#btnUl2{
+	transition: 0.3s;
+}
+#btnUl3{
+	transition: 0.3s;
+}
+.selNav li{
+	position: relative;
+	padding: 20px;
+}
 .selNav li:hover{
+	
 	opacity: 0.6;
 	border-radius: 10px;
 	padding-right: 10px;
@@ -1184,5 +1194,79 @@ footer div {
 a{
 		outline: none;
 	text-decoration: none;
+}
+
+
+#selectReg{
+	width: 300px;
+	outline: none;
+	background: #F9F9FC;
+	border: 2px solid #6C83B9;
+	border-radius: 8px;
+	font-size: 16px;
+	line-height: 24px;
+	color: #92A3C9;
+	height: 44px;
+	position: absolute;
+	margin-left: 20px;
+	margin-top: 110px;
+}
+
+#map-btn{
+	position: absolute;
+	margin-top: 50px;
+	margin-left: 60px;
+	display: none;
+	outline: none;
+	text-decoration: none;
+	z-index: 3;
+}
+
+#blockMap h1{
+	position: absolute;
+	z-index: 2;
+	width: 100px;
+	margin-top: 20px;
+	margin-left: 10px;
+	font-family: "Century Gothic Bold";
+	font-size: 34px;
+	line-height: 32px;
+	color: #30529F;
+	
+	border-radius: 10px;
+	border-right: none;
+	background: linear-gradient(90deg,rgb(48,82,159,0.4) , white  );
+}
+#map{
+	width: 371px;
+	height: 603px;
+	padding: 0;
+	 margin: 0;
+}
+
+
+.animationLoader__image {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 300px;
+  margin-top: -100px;
+  margin-left: -200px;
+  background: url("../img/load.gif") no-repeat ;
+  background-size: cover;
+}
+
+ 
+
+.lanimation_hiding .animationLoader {
+  transition: 5s opacity;
+  opacity: 0;
+}
+
+ 
+
+.animation .animationLoader {
+  display: none;
 }
 }
